--- a/Life_Expectancy.ipynb
+++ b/Life_Expectancy.ipynb
@@ -65,7 +65,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        ">>The Goal of this project is to have a better understanding of factors affecting Life expectancy throughout the world. The data from [Kaggle](https://www.kaggle.com/kumarajarshi/life-expectancy-who) "
+        ">>The Goal of this project is to have a better understanding of factors affecting Life expectancy throughout the world. The data was taken from [Kaggle](https://www.kaggle.com/kumarajarshi/life-expectancy-who) "
       ],
       "metadata": {
         "id": "1xtSAb-PejhT"
